--- a/frontend/ai-travel-planner/src/index.css
+++ b/frontend/ai-travel-planner/src/index.css
@@ -1,15 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(14, 7, 7, 0.87);
-  background-color: #f9f4f4;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #fbf8f8;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,8 +25,8 @@ a:hover {
   color: #535bf2;
 }
 
-body {
- 
+body{
+  
 }
 
 h1 {
